---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/type_error_with_function_call.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `Nil`, but rhs has type `String`
   ╭─[crabbing-interpreters/tests/cases/type_error_with_function_call.lox:3:1]
   │
 3 │ f() + "f()";
   │ ─┬─ ┬ ──┬──  
   │  │  │   ╰──── this is of type `String`
   │  │  │        
   │  │  ╰──────── the operator in question
   │  │           
   │  ╰─────────── this is of type `Nil`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
